# indexbind

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: ci.yml  deploy-cloudflare.yml  release.yml
crates/indexbind-build/: Cargo.toml
crates/indexbind-build/src/: lib.rs  main.rs
crates/indexbind-core/: Cargo.toml
crates/indexbind-core/src/: artifact.rs  build.rs  canonical.rs  chunking.rs  embedding.rs  error.rs  lexical.rs  lib.rs  retriever.rs  types.rs
crates/indexbind-node/: Cargo.toml
crates/indexbind-node/src/: lib.rs
crates/indexbind-wasm/: Cargo.toml
crates/indexbind-wasm/src/: lib.rs
crates/inkdex-build/: Cargo.toml
crates/inkdex-build/src/: lib.rs  main.rs
crates/inkdex-core/: Cargo.toml
crates/inkdex-core/src/: artifact.rs  embedding.rs  lib.rs  retriever.rs
crates/inkdex-node/src/: lib.rs
docs/architecture/: canonical-artifact-and-wasm.md
docs/site/: README.md  mdorigin.config.json
docs/site/architecture/: README.md  canonical-artifact-and-wasm.md
docs/site/concepts/: README.md  canonical-artifact-and-wasm.md  canonical-bundles.md  runtime-model.md
docs/site/guides/: README.md  adoption-examples.md  getting-started.md  search-quality-controls.md  web-and-cloudflare.md
docs/site/reference/: README.md  api.md  cli.md  packaging.md
fixtures/benchmark/: README.md
fixtures/benchmark/basic/: queries.json
fixtures/benchmark/basic/docs/guides/: python.md  rust.md
fixtures/benchmark/basic/docs/ops/: network.md
fixtures/manual/cloudflare-worker-issue-18/: README.md  index.ts  wrangler.jsonc
forks/model2vec-rs/: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig  LICENSE  README.md
forks/model2vec-rs/.github/workflows/: ci.yaml
forks/model2vec-rs/src/: main.rs  model.rs
scripts/: build-wasm.mjs  copy-native.mjs  prepare-native-package.mjs  prepare-root-package.mjs  publish-from-github-release.mjs  smoke-cli.mjs  smoke-cloudflare-worker.mjs  smoke-install.mjs  smoke-web-browser.mjs  smoke-web-bundle.mjs  verify-root-package.mjs
skills/indexbind/: SKILL.md
src/: build.ts  cli.ts  cloudflare.ts  index.ts  native.ts  web-core.ts  web.ts
