[workspace]
members = [
  "crates/indexbind-core",
  "crates/indexbind-build",
  "crates/indexbind-node",
  "crates/indexbind-wasm",
]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/jolestar/indexbind"
homepage = "https://indexbind.jolestar.workers.dev"
documentation = "https://indexbind.jolestar.workers.dev"

[workspace.dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
getrandom = { version = "0.2.17", features = ["js"] }
napi = { version = "3.8.3", features = ["napi4"] }
napi-build = "2.3.0"
napi-derive = "3.5.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
serde-wasm-bindgen = "0.6.5"
tempfile = "3.23.0"
thiserror = "2.0.16"
walkdir = "2.5.0"
wasm-bindgen = "0.2.114"
