[package]
name = "indexbind-build"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
indexbind-core = { path = "../indexbind-core" }

[[bin]]
name = "indexbind-build"
path = "src/main.rs"
