[package]
name = "indexbind-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI and build helpers for generating indexbind artifacts."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
indexbind-core = { path = "../indexbind-core" }

[[bin]]
name = "indexbind-build"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true
