[package]
name = "indexbind-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core retrieval engine for indexbind artifacts."

[dependencies]
anyhow.workspace = true
blake3.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite.workspace = true
model2vec-rs = { path = "../../forks/model2vec-rs", default-features = false, features = ["native"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
model2vec-rs = { path = "../../forks/model2vec-rs", default-features = false, features = ["wasm"] }

[dev-dependencies]
tempfile.workspace = true
