[package]
name = "indexbind-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core retrieval engine for indexbind artifacts."

[dependencies]
anyhow.workspace = true
blake3.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hf-hub.workspace = true
rusqlite.workspace = true
model2vec-rs = { git = "https://github.com/MinishLab/model2vec-rs.git", rev = "53c5a618f5d04e889359a3a0c04676e9c3138769", default-features = false, features = ["onig", "hf-hub"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
model2vec-rs = { git = "https://github.com/MinishLab/model2vec-rs.git", rev = "53c5a618f5d04e889359a3a0c04676e9c3138769", default-features = false, features = ["wasm"] }

[dev-dependencies]
tempfile.workspace = true
