[package]
name = "indexbind-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Node N-API bindings for querying indexbind artifacts."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
indexbind-core = { path = "../indexbind-core" }

[build-dependencies]
napi-build.workspace = true
