[package]
name = "indexbind-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "WASM query runtime for canonical indexbind bundles."

[lib]
crate-type = ["cdylib"]

[dependencies]
blake3.workspace = true
indexbind-core = { path = "../indexbind-core" }
model2vec-rs = { git = "https://github.com/MinishLab/model2vec-rs.git", rev = "53c5a618f5d04e889359a3a0c04676e9c3138769", default-features = false, features = ["wasm"] }
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
