[package]
name = "inkdex-build"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
inkdex-core = { path = "../inkdex-core" }

[[bin]]
name = "inkdex-build"
path = "src/main.rs"
